CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(pcan )
set(CMAKE_USE_RELATIVE_PATHS ON)

message("install module with path:" ${CXB_MODULE_DIST})

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CXB_MODULE_DIST})
SET( CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CXB_MODULE_DIST})
SET( CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CXB_MODULE_DIST})
SET( CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELWITHDEBINFO ${CXB_MODULE_DIST})

# set(CMAKE_COMPILE_PDB_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/binary/)
# set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/binary/lib)
# set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/binary/lib)


set(PCAN_DIR ${PROJECT_SOURCE_DIR}/3rd/pcan)
set (CMAKE_MODULE_PATH "${CMAKE_MODULE_PATH};${PROJECT_SOURCE_DIR}/cmake")
message("Test:" ${PCAN_DIR})
set_property(GLOBAL PROPERTY USE_FOLDERS ON) 
add_definitions(-DNAPI_DISABLE_CPP_EXCEPTIONS)
if(NODE)
ADD_SUBDIRECTORY(src/node)
else()
ADD_SUBDIRECTORY(src/passoa)
endif()