CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(pcan )
set(CMAKE_USE_RELATIVE_PATHS ON)

set(PROJECT_SOURCE_DIR "${PROJECT_SOURCE_DIR}/..")

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/binary)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/binary/lib)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/binary/lib)


set_property(GLOBAL PROPERTY USE_FOLDERS ON) 
if(PCAN_MAIN)
ADD_SUBDIRECTORY(src)
endif()
if(PCAN_MAKE_TEST)
ADD_SUBDIRECTORY(test)
endif()
if(PCAN_MAKE_JS)
ADD_SUBDIRECTORY(binding)
endif()